; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/nodes/extr_equalfuncs.c__equalAlterPublicationStmt.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/nodes/extr_equalfuncs.c__equalAlterPublicationStmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pubname = common dso_local global i32 0, align 4
@options = common dso_local global i32 0, align 4
@tables = common dso_local global i32 0, align 4
@for_all_tables = common dso_local global i32 0, align 4
@tableAction = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @_equalAlterPublicationStmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_equalAlterPublicationStmt(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* @pubname, align 4
  %6 = call i32 @COMPARE_STRING_FIELD(i32 %5)
  %7 = load i32, i32* @options, align 4
  %8 = call i32 @COMPARE_NODE_FIELD(i32 %7)
  %9 = load i32, i32* @tables, align 4
  %10 = call i32 @COMPARE_NODE_FIELD(i32 %9)
  %11 = load i32, i32* @for_all_tables, align 4
  %12 = call i32 @COMPARE_SCALAR_FIELD(i32 %11)
  %13 = load i32, i32* @tableAction, align 4
  %14 = call i32 @COMPARE_SCALAR_FIELD(i32 %13)
  ret i32 1
}

declare dso_local i32 @COMPARE_STRING_FIELD(i32) #1

declare dso_local i32 @COMPARE_NODE_FIELD(i32) #1

declare dso_local i32 @COMPARE_SCALAR_FIELD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
